# clab-ai-orchestrator

./: .env.example  .gitignore  NEXT_TASK.md  OPEN_WEBUI_MCP_FIXES.md  README.md  agent.md  docker-compose.yml  start.sh
.agent/workflows/: pr.md
docs/: architecture.md  repository-structure.md  roadmap.md  setup-guide.md  troubleshooting.md  version-strategy.md
labs/: README.md  vjunos-test.clab.yml
labs/basic-bgp/: topology.clab.yml
labs/basic-bgp/configs/frr1/: frr.conf
labs/basic-bgp/configs/frr2/: daemons  frr.conf
labs/basic-bgp/configs/vjunos1/: juniper.conf
labs/configs/: vjunos1-bgp.conf
labs/configs/frr1-test/: daemons  frr.conf
mcp-bridge/: Dockerfile  README.md  pyproject.toml
mcp-bridge/src/mcp_bridge/: __init__.py  server.py
mcp-bridge/src/mcp_bridge/tools/: __init__.py  clab.py  frr.py  junos.py  report.py
mcp-bridge/src/mcp_bridge/utils/: __init__.py  docker.py
samples/: README.md  open_webui_prompts.md
samples/01_deploy_and_verify/: README.md
samples/02_troubleshoot_bgp/: README.md
samples/03_config_change/: README.md
setup/: install.sh  kill_socat.sh  modify-vjunos.sh  open_webui_mcp_client.py
vendors/: README.md
vendors/frr/: parser.py
vendors/frr/templates/: bgp.conf.j2
vendors/junos/: init.conf  parser.py
vendors/junos/templates/: bgp.conf.j2
